moving limitations section to methods, shortening discussion

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -102,26 +102,19 @@ Data will be submitted to Dryad upon publication.
     \paragraph{}
     In many biological systems, interactions between system elements (be these species, individuals, etc.) affect population-level performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. \textbf{Network theory has been widely applied to investigate biological systems, including ecological communities consisting of food webs, plant-pollinator and host-parasite interactions (e.g.\ \cite{Lafferty2008, Stouffer2014, Cirtwill2015a}), inforuming us on the underlying biological processes structuring these systems \parencite{Dunne2002, Thompson2012}.}
 
-    %Biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}. 
-
     %\paragraph{}
     %Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g.\ \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These species and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understandingof system dynamics and persistence \parencite{Godoy2018c}.
 
- 
 
     \paragraph{} 
     \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. `Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through the use of population dynamics models, and thus draw direct conclusions about the effects of interactions on patterns of coexistence and diversity \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
     \paragraph{} % PARAGRAPH TO BETTER MOTIVATE
-    \textbf{Various methods have been developed to circumventing these issues. A common approach is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{Weiss-Lehman2022}. Other methods attempt to infer interactions for which there is little data from traits \parencite{}, phylogeny \parencite{} or ... \parencite{Ovaskainen2017}. Alternatively, interactions are not identified and models instead rely on estimating association between species, which include the effects of interactions. Here we present another alternative, which ....}
+    \textbf{Various methods have been developed to circumventing these issues. A common approach is to reduce the number of parameters to be estimated by assuming many interactions are weak enough to be negligeable, and thus do not need to be inferred \parencite{Weiss-Lehman2022}. Other methods attempt to infer interactions for which there is little data from traits \parencite{}, phylogeny \parencite{} or ... \parencite{Ovaskainen2017}. Alternatively, interactions are not identified and models instead rely on estimating association between species, which include the effects of interactions. Here we present another alternative, a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners.}
 
 
     \paragraph{} 
-    We present a general framework to estimate interactions in diverse horizontal systems. We specify a joint model which allows us to estimate both pairwise identifiable and pairwise unidentifiable interactions from measures of performance in the absence and presence of different interaction partners. We implement the model in STAN \parencite{Carpenter2017}, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate the advantages of this approach through a range of ecologically-relevant findings. \textbf{We further describe how to couch the returned interaction estimates into established models of population dynamics, thus allowing inferences to be drawn between the structure and nature of the interaction matrix and patterns of community abundances and biodiversity. This framework presents a new and exciting way to make use of data that may usually be too incomplete to infer all pairwise interactions, alongside pre-written model code in STAN which requires little to no modification for immediate application to a much wider variety of datasets than the case study presented here.}
-
-   % Whilst various methods have been proposed to retrieve horizontal interaction networks from highly diverse datasets, these approaches tend to assume sparsity of interactions. In other words, they assume that not all interactions are realised (there exist true zeros), which allows the methods to reduce the number of parameters to be evaluated (fewer interactions = fewer parameters). Ours allows the estimation of interactions which would usually not be estimated by other methods (e.g. Ovatskained et al. Weiss-Lehmann et al, association networks)Ovatskained et al. Weiss-Lehmann et al are two such approaches. We thus open up a new range of questions which can be asked from pre-existing datasets.  DISCUSSION 
-   % Ovaskainen - model with independant alphas along the diagonal and then rather than making the re to fill in gaps, all the alphas are the diagonal + what we are inferring as the response and effect matrix. Ovaskainen 2017 does not assume sparsity but requires less information that we do(?) and makes other simplifying assumptions
-
+    We present a general framework to estimate interactions in diverse horizontal systems. We implement the model in STAN \parencite{Carpenter2017}, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate the advantages of this approach through a range of ecologically-relevant findings. \textbf{We further describe how to couch the returned interaction estimates into established models of population dynamics, thus allowing inferences to be drawn between the structure and nature of the interaction matrix and patterns of community abundances and biodiversity. This framework presents a new and exciting way to make use of data that may usually be too incomplete to infer all pairwise interactions, alongside pre-written model code in STAN which requires little to no modification for immediate application to a much wider variety of datasets than the case study presented here.}
 
 
 \section{Methods}
@@ -179,7 +172,8 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         f(p_{k}) = \gamma_{d_k} - r_{d_k} \sum_{j=1}^{t} e_{j} X_{d_k, j}
         \label{rim}
         \end{equation}
-    To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, but across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} e_{j}$. \textbf{Readers should note that this step makes different assumptions on the structure of interactions in nature, specifically that species tend to have a generalisable effect on and response to neighbours regardless of neighbour identity. This stands in contrast to the NDDM, which assumes a unique parameter for every interaction. Such simplification is useful from a statistical point of view in order to infer unidentifiable interactions, but its ecological significance should not be dismissed.}
+    To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, but across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} e_{j}$. \textbf{Readers should note that this step makes different assumptions on the structure of interactions in nature, specifically that species tend to have a generalisable effect on and response to neighbours regardless of neighbour identity. This stands in contrast to the NDDM, which assumes a unique parameter for every interaction. Such simplification is useful from a statistical point of view in order to infer unidentifiable interactions, but its ecological significance should not be dismissed. Care should therefore be taken to assess the different assumptions behind the estimation of identifiable and unidentifiable interactions, and how well these may apply to any particular system.}
+    % Last sentence moved from Discussion
 
 
     \subsection{Joining the two models}
@@ -257,7 +251,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
     \textbf{In horizontal systems, interaction networks are expected to be non-sparse because species are typically assumed to interact via the same set of shared resources. Nonetheless, it is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. We note that an overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution since we cannot confidently speak to its effect. Lastly, the interaction may be well-informed and weak, in which case the posterior is centered around zero.}
 
-    \textbf{If, contrarily to our assumptions, a user of our framework has good cause to believe that many interactions are weak and the network is instead sparse, there exists multiple approaches to this issue. For example, setting strongly informed priors centered around zero for those interactions that are thought to be negligeable would be relatively easy to implement in the code we provide. We also point the reader towards alternative methods which have been developped explicitly for sparse interaction networks \parencite{Weiss-Lehman2022}.} 
+    \textbf{If, contrarily to our assumptions, a user of our framework has good cause to believe that many interactions are weak and the network is instead sparse, there exists multiple approaches to this issue. For example, setting strongly informed priors centered around zero for those interactions that are thought to be negligeable would be relatively easy to implement in the code we provide. We also point the reader towards alternative methods which have been developped explicitly for sparse interaction networks \parencite{Weiss-Lehman2022}.} Moreover, forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. % Moved over from Discussion
 
 
     \subsection{Case study}
@@ -275,16 +269,10 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \subsection{Case study results}
 
     \paragraph{}
-    %We first applied this joint model to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where focal elements consisted of \textbf{$s = 22$} focal species and up to \textbf{$k = 52$} neighbouring species (the 22 focal species and an additional 30 species) and performance $p$ was measured as viable seed production. 
     The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM.  When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled according to focal intrinsic fitness into interaction strengths comparable between focal species, and we sampled from each resulting interaction strength distribution to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
     For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction  across all samples. Overall, 53.3\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions , however, were facilitative, as were the medians of 43.2\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{This stands in contrast to interspecific interactions, for which only 19.4\% did not overlap with 0 when considering all neighbours. It is reasonable to assume that many of those interactions were poorly informed especially when neighbours were rare (see Methods \ref{meth:sparse}), and indeed the proportion of interspecific interactions with do not overlap with 0 increased to 32\% when considering neighbouring focal species only.}
-
-
-    %\paragraph{}
-    %We applied the same data to the cooccur package in R \parencite{Griffith2016} to build a spatial-association network, a common alternative to inferring interactions in diverse systems. Species associations (Figure \ref{fig:netwks}.C) were all negative (competitive), symmetrical, and the association between a species and itself (the equivalent to intraspecific interactions) cannot be estimated. Together, these aspects make species association networks qualitatively different to the interaction networks returned by our framework. 
-
 
     \subsection{Examples of ecological applications}
 
@@ -302,7 +290,6 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \subsubsection*{Do all exotic species compete with native species?}
     Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). \textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, it's overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. The results from our case study suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
 
-    
 
 \section{Discussion}
 
@@ -313,41 +300,33 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \paragraph{}
     \textbf{In particular, our approach includes a method to infer all pairwise interactions despite 'incomplete' data, whereas alternatives typically address this issue by assuming many of these interactions are close to or at zero, and thus negligeable \parencite{}. In our case study, many interaction estimates indeed overlapped with zero, though as discussed in the Methods \ref{meth:sparse} this does not necessarily imply sparsity. DESCRIBE OTHER ALTERNATIVES. Whether our framework provides a better fit to data remains to be tested, and will depend strongly on the particulars of both the data and system at hand. Nonetheless, our method provides a new way to make use of data that has historically been insufficient or too incomplete to infer all pairwise interactions, and thus opens up a new range of questions and findings which can be explored with pre-existing data.}  Though we illustrate our study with one particular ecological dataset, the method presented here could also be adapted for use on a wider array of  horizontal systems such as those found in microbial, neural, and social networks. 
 
-    %By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+       % Whilst various methods have been proposed to retrieve horizontal interaction networks from highly diverse datasets, these approaches tend to assume sparsity of interactions. In other words, they assume that not all interactions are realised (there exist true zeros), which allows the methods to reduce the number of parameters to be evaluated (fewer interactions = fewer parameters). Ours allows the estimation of interactions which would usually not be estimated by other methods (e.g. Ovatskained et al. Weiss-Lehmann et al, association networks)Ovatskained et al. Weiss-Lehmann et al are two such approaches. We thus open up a new range of questions which can be asked from pre-existing datasets.  DISCUSSION 
+   % Ovaskainen - model with independant alphas along the diagonal and then rather than making the re to fill in gaps, all the alphas are the diagonal + what we are inferring as the response and effect matrix. Ovaskainen 2017 does not assume sparsity but requires less information that we do(?) and makes other simplifying assumptions
 
-    %\paragraph{} 
-    %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+   % We have not conducted a comparison of between our proposed method and the others we have cited here, in part because the outcome of such an exercise would be highly dependant on the data and system at hand, as well as the questions which are being posed. 
+    % We would verbally compare our method to other techniques (such as Bayesian variable selection) to enumerate the specific areas in which our method presents a new category of analysis, not an alternative or “superior” approach to an existing method. We would then also discuss the different aims, assumptions (e.g. network sparsity in the case of Bayesian variable selection) and data which each method requires, without leading the reader to assume that we believe our framework is 'better' than others when it comes to modelling the response variable of choice.
+
+    \paragraph{}
+    Nonetheless, the amount of data required for estimating all interactions in diverse communities using our frameworkmay still be substantial. Grouping species which appear very rarely is also a common strategy we employed in our case study to avoid over-parameterisation. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.  
+
+    %By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020
 
     \paragraph{}
     Indeed, species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study \textbf{on a horizontal system}. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019} \textbf{though often requires the inclusion of other trophic levels}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks, \textbf{especially when linked to population models,} can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
 
     \paragraph{}
-    Quantifying the matrix of scaled interaction strengths between species in horizontal communities can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another.  % Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. 
-    Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. \textbf{Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity.} Whilst there is still little consensus on how facilitation may affect biodiversity \parencite{Bruno2003, Brooker2008}, recent work suggests it may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and can benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}.
+    Quantifying the community interactions matrix can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another.     Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. \textbf{Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity.} Whilst there is still little consensus on how facilitation may affect biodiversity \parencite{Bruno2003, Brooker2008}, recent work suggests it may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and can benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}.
 
-    %\paragraph{}
-    %Another key feature of our model framework is the inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised \parencite{Callaway1997a} but there is still little consensus on how they may affect biodiversity \parencite{Bruno2003, Brooker2008}. Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and can benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}. Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  
-        
     \paragraph{}
     Ultimately, quantifying species interaction networks allows us to apply tools from network theory which will help us understand not only how species interact, but also how these interactions drive community-level patterns of density and diversity. Several metrics already exist for describing horizontal network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks networks (e.g.\ \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as as horizontal communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained between species belonging to the same trophic level. Likewise, networks also provide several ways of measuring and describing species roles in their respective communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for non-trophic networks. 
 
-    % PARAGRAPH HERE ON ALTERNATIVES ?
-    % We have not conducted a comparison of between our proposed method and the others we have cited here, in part because the outcome of such an exercise would be highly dependant on the data and system at hand, as well as the questions which are being posed. 
-    % We would verbally compare our method to other techniques (such as Bayesian variable selection) to enumerate the specific areas in which our method presents a new category of analysis, not an alternative or “superior” approach to an existing method. We would then also discuss the different aims, assumptions (e.g. network sparsity in the case of Bayesian variable selection) and data which each method requires, without leading the reader to assume that we believe our framework is 'better' than others when it comes to modelling the response variable of choice.
 
-   \subsection{Limitations}
+   %\subsection{Limitations}
 
+    % MOVED TO METHODS
 
-    \paragraph{}
-    %Our novel framework includes a versatile approach for estimating interactions between species which are not observed to cooccur. Identifiable interactions are estimated with a unique parameter, as opposed to the latent variables used to quantify unidentifiable interactions. 
-% MOVE BELOW TO METHODS?
-    Care should therefore be taken to assess the different assumptions behind our estimation of identifiable and unidentifiable interactions, and how well these may apply to any particular system. It is also important to consider the likely reasons for unidentifiable interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
-
-        %\paragraph{}
-        %Our framework assumes that though the total effect of one element on another increases with density, this relationship is linear. This may not always be the case however, as interactions may be invariant to density \parencite{} or scale non-linearly \parencite{}. Our framework also evaluates direct interactions only, and does not consider higher-order interactions \parencite{}. 
-
-    \paragraph{}
-    Our model framework is aimed to helping empiricists who would like to estimate species interactions in non-trophic communities. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain convergence and model behaviour to verify that the full parameter space is sampled. The amount of data required for sampling diverse communities may still be substantial. Grouping species which appear very rarely is also a common strategy to avoid over-parameterisation. In our case study, neighbour species which were recorded fewer than 10 times across all observations were grouped into an 'other' category with its own interaction effect. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.   
+    %\paragraph{}
+    %Our framework assumes that though the total effect of one element on another increases with density, this relationship is linear. This may not always be the case however, as interactions may be invariant to density \parencite{} or scale non-linearly \parencite{}. Our framework also evaluates direct interactions only, and does not consider higher-order interactions \parencite{}. 
 
 
 \section*{Acknowledgements}
